--- a/_sass/partials/layout/_sidebar.scss
+++ b/_sass/partials/layout/_sidebar.scss
@@ -1,16 +1,17 @@
 // classic sidebar styles
 .classic-sidebar{
     width: $sidebar-width;
-    background: white;
+    background: var(--surface);
+    color: var(--text);
     @include shadow(1);
-    
+
     @media screen and (max-width: $sidebarcollapse){
         width: 100%;
         margin-bottom: $margin-width;
     }
 }
 
-.has-classic-sidebar-left{   
+.has-classic-sidebar-left{
     .margin{
         .content{
             @include flexbox(row-reverse, wrap, space-between, flex-start);
@@ -49,7 +50,7 @@
                     margin-bottom: $margin-width;
                 }
             }
-        }    
+        }
     }
 }
 
@@ -59,16 +60,17 @@
     height: 100%;
     position: fixed;
     top: 0;
-    background: white;
+    background: var(--surface);
+    color: var(--text);
     z-index: 111;
     overflow-y: auto;
     @include shadow(1);
     transition: .3s all ease;
-    
+
     .row{
         padding: 20px;
         border-bottom: $line;
-        
+
         .ts-no-slogan,
         .ts-icon{
             display: none;
